# routes/project/inference_endpoint.rb
@@ -2,9 +2,12 @@
 
 class Clover
   hash_branch(:project_prefix, "inference-endpoint") do |r|
+    r.get api? do
+      {items: Serializers::InferenceEndpoint.serialize(all_inference_models)}
+    end
+
     r.get web? do
-      @inference_models = inference_endpoint_ds.eager(:location, load_balancer: :private_subnet).all +
-        inference_router_model_ds.eager(inference_router: {load_balancer: :private_subnet}).all
+      @inference_models = all_inference_models
       @remaining_free_quota = FreeQuota.remaining_free_quota("inference-tokens", @project.id)
       @free_quota_unit = "inference tokens"
       @has_valid_payment_method = @project.has_valid_payment_method?
